--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -12,6 +12,6 @@
 {% if user.is_staff %}
 <ul>
     <li><a href="{% url list_students classroom.pk %}">Students</a></li>
-    <li><a href="{% url list_docmakers classroom.pk %}">Docmaker</a></li>
+    <li><a href="{% url list_docmakers classroom.pk %}">Docmakers</a></li>
 </ul>
 {% endif %}
