--- a/apps/classroom/templates/classroom/list_documents.html
+++ b/apps/classroom/templates/classroom/list_documents.html
@@ -15,7 +15,7 @@
         {% if document.access_index == 0 or document.access_index == 1 or user.is_staff %}
         {% if document.access_index == 0 or user.is_active %}
         {% if document.exists %}
-        <li><a href="{% url serve_document classroom.pk document.basename %}">{{ document }}</a></li>
+        <li><a href="{% url serve_document classroom.pk document.filename %}">{{ document.label }}</a></li>
         {% else %}
         <li>[ {{ document }} ]</li>
         {% endif %}
@@ -40,7 +40,7 @@
                 {% if document.access_index == 0 or document.access_index == 1 or user.is_staff %}
                 {% if document.access_index == 0 or user.is_active %}
                 {% if document.exists %}
-                <li><a href="{% url serve_document classroom.pk document.basename %}">{{ document }}</a></li>
+                <li><a href="{% url serve_document classroom.pk document.filename %}">{{ document.label }}</a></li>
                 {% else %}
                 <li>[ {{ document }} ]</li>
                 {% endif %}
