Eliminated use of FilePathField
Replaced with use of CharField to store filename only. Created a li'l
function get_choices_from_path to create a dropdown in admin. Cf. https://code.djangoproject.com/ticket/6896

--- a/apps/docmaker/templates/docmaker/list_docmakers.html
+++ b/apps/docmaker/templates/docmaker/list_docmakers.html
@@ -3,7 +3,7 @@
 {% block main_content %}
     {% if user.is_staff %}
     <ul class="action_links">
-        <li><a href="{% url build_all classroom.pk %}">Build all</a></li>
+        <li><a href="{% url build_all classroom.pk %}">All</a></li>
         <li><a href="{% url admin:app_list 'docmaker' %}" target="_blank">Edit</a></li>
     </ul>
     {% endif %}
