--- a/apps/classroom/templates/classroom/list_documents.html
+++ b/apps/classroom/templates/classroom/list_documents.html
@@ -3,7 +3,8 @@
 {% block main_content %}
     {% if user.is_staff %}
     <ul class="action_links">
-        <li><a href="{% url admin:classroom_document_changelist %}" target="_blank">Edit</a></li>
+        <li><a href="{% url admin:classroom_document_changelist %}" target="_blank">Add</a></li>
+        <li><a href="{% url admin:classroom_activity_changelist %}" target="_blank">Edit</a></li>
     </ul>
     {% endif %}
 
@@ -15,7 +16,7 @@
         {% if document.access_index == 0 or document.access_index == 1 or user.is_staff %}
         {% if document.access_index == 0 or user.is_active %}
         {% if document.exists %}
-        <li><a href="{% url serve_document classroom.pk document.filename %}">{{ document.label }}</a></li>
+        <li><a href="{% url serve_document classroom.pk document.filename %}">{{ document }}</a></li>
         {% else %}
         <li>[ {{ document }} ]</li>
         {% endif %}
@@ -40,7 +41,7 @@
                 {% if document.access_index == 0 or document.access_index == 1 or user.is_staff %}
                 {% if document.access_index == 0 or user.is_active %}
                 {% if document.exists %}
-                <li><a href="{% url serve_document classroom.pk document.filename %}">{{ document.label }}</a></li>
+                <li><a href="{% url serve_document classroom.pk document.filename %}">{{ document }}</a></li>
                 {% else %}
                 <li>[ {{ document }} ]</li>
                 {% endif %}
