--- a/apps/docmaker/templates/docmaker/list_docmakers.html
+++ b/apps/docmaker/templates/docmaker/list_docmakers.html
@@ -21,11 +21,11 @@
     <dl>
         {% for block in classroom.activityblock_set.all %}
         <dt>
-            {{ block }}{% if block.date %} ({{ block.date }}){% endif %}
+            {% if block.date %}{{ block.date }}{% else %}{{ block }}{% endif %}
         </dt>
         {% if block.activity_set.all %}
         {% for activity in block.activity_set.all %}
-        <dd>{{ activity.label }}
+        <dd>{{ activity.label }}{% if activity.title %}: {{ activity.title }}{% endif %}
             {% if activity.activity_type.docmaker_set.all %}
             <ul>
             {% for docmaker in activity.activity_type.docmaker_set.all %}
@@ -35,7 +35,11 @@
             {% endif %}
         </dd>
         {% endfor %}
-        {% endif %}
+        {% else %}
+        <dd>
+            {{ block.heading }}
+        </dd>
+        {% endif %}        
         {% endfor %}
     </dl>
     {% else %}
