--- a/apps/classroom/templates/classroom/list_documents.html
+++ b/apps/classroom/templates/classroom/list_documents.html
@@ -30,11 +30,11 @@
     <dl>
         {% for block in classroom.activityblock_set.all %}
         <dt>
-            {{ block }}{% if block.date %} ({{ block.date }}){% endif %}
+            {% if block.date %}{{ block.date }}{% else %}{{ block }}{% endif %}
         </dt>
         {% if block.activity_set.all %}
         {% for activity in block.activity_set.all %}
-        <dd>{{ activity.label }}
+        <dd>{{ activity.label }}{% if activity.title %}: {{ activity.title }}{% endif %}
             {% if activity.documents %}
             <ul>
                 {% for document in activity.documents.all %}
@@ -52,7 +52,11 @@
             {% endif %}
         </dd>
         {% endfor %}
-        {% endif %}
+        {% else %}
+        <dd>
+            {{ block.heading }}
+        </dd>
+        {% endif %}        
         {% endfor %}
     </dl>
     {% else %}
