Added scratchpad to show_classroom.html

--- a/apps/classroom/templates/classroom/show_classroom.html
+++ b/apps/classroom/templates/classroom/show_classroom.html
@@ -15,4 +15,9 @@
 
     <h2>Course Overview</h2>
     {{ classroom.overview|rst2html }}
+    
+    <div id="scratchpad" onClick="Toggle('scratchpad')">
+    <h2>Scratchpad</h2>
+    {{ classroom.scratchpad|rst2html }}
+    </div>
 {% endblock %}
