--- a/website/static/website/main.css
+++ b/website/static/website/main.css
@@ -19,7 +19,7 @@
 
 .action_links {
     float:right;
-    margin:1em;
+    margin-top:1em;
     font-size:75%;
     text-transform:uppercase;
     padding:0.5em;
